<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterFormula">
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="10dp"
               android:layout_above="@id/loginlayout"/>

    <LinearLayout android:id="@+id/loginlayout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingHorizontal="15dp"
                  android:orientation="vertical"
                  android:layout_centerInParent="true">

        <EditText android:id="@+id/username1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/username"
                  android:inputType="textPersonName"/>
        <EditText android:id="@+id/password1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/password"
                  android:inputType="textPassword"/>
        <EditText android:id="@+id/password2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/rpassword"
                  android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="10dp"
                  android:layout_below="@id/loginlayout"
                  android:gravity="center">


        <Button android:id="@+id/register1B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"/>

        <Button android:id="@+id/return1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backtologin"/>


    </LinearLayout>

</RelativeLayout>